# zarr-benchmarks

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  DEVELOPERS.md  LICENSE  README.md  create_simple_zarr_array.py  pyproject.toml  tox.toml
.github/actions/linting/: action.yml
.github/workflows/: benchmarks.yaml  linting.yaml  website.yaml
docs/: Gemfile  _config.yml  index.md
docs/_includes/: footer.html  head.html  header.html  social.html
docs/_layouts/: default.html
example_results/: 0001_zarr-python-v2.json  0002_zarr-python-v3.json  0003_tensorstore.json  0145_zarr-python-v2.json  0146_zarr-python-v3.json  0147_tensorstore.json
example_results/dense/: 0001_zarr-python-v2.json  0002_zarr-python-v3.json  0003_tensorstore.json
example_results/heart/: 0001_zarr-python-v2.json  0002_zarr-python-v3.json  0003_tensorstore.json
example_results/sparse/: 0001_zarr-python-v2.json  0002_zarr-python-v3.json  0003_tensorstore.json
src/: benchmark.py  benchmark_func.py  benchmark_timeit.py  minimal_pyperf_error.py  parse_json.py  parse_json_for_plots.py  plot_tests.ipynb  plot_tests_chunk_size.ipynb  plot_tests_read_write.ipynb  plot_tests_shuffle.ipynb  pyperf_rough.py  read_values.py  read_write_tensorstore.py  read_write_zarr.py  read_write_zarr_v2.py  read_write_zarr_v3.py  rough_plots.py  utils.py
src/zarr_benchmarks/: create_plots.py  fetch_datasets.py  parse_json_for_plots.py  plot_tests.ipynb  plot_tests_chunk_size.ipynb  plot_tests_read_write.ipynb  plot_tests_shuffle.ipynb  plotting_functions.py  read_write_tensorstore.py  read_write_zarr_utils.py  read_write_zarr_v2.py  read_write_zarr_v3.py  utils.py
src/zarr_benchmarks/read_write_zarr/: __init__.py  read_write_tensorstore.py  read_write_zarr_python_v2.py  read_write_zarr_python_v3.py
tests/: benchmark_parameters.py  conftest.py  test_read_benchmark.py  test_read_tensorstore_benchmark.py  test_read_zarr_python_benchmark.py  test_write_benchmark.py  test_write_tensorstore_benchmark.py  test_write_zarr_python_benchmark.py
tests/benchmarks/: benchmark_parameters_mult_runs.py  test_read_tensorstore_benchmark.py  test_read_zarr_benchmark.py  test_read_zarr_python_benchmark.py  test_write_tensorstore_benchmark.py  test_write_zarr_benchmark.py  test_write_zarr_python_benchmark.py  validate_zarr.py
tests/benchmarks/benchmark_configs/: chunk_size.json  default.json  dev.json  read_write.json  shuffle.json
tests/benchmarks/benchmark_configs/schema/: benchmark.schema.json
tests/tests/: test_configs.py  test_dataset_fetching.py  test_fetch_datasets.py  test_write_tensorstore.py  test_write_zarr.py  test_write_zarr_array.py  utils.py
