[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [
    {email = "arc.collaborations@ucl.ac.uk", name = "Centre for Advanced Research Computing"},
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "imageio",
    "matplotlib",
    "pandas",
    "pytest",
    "pytest-benchmark",
    "seaborn",
    "tensorstore",
    "tox",
    "zarr",
]
description = "zarr benchmarks"
license = {file = "LICENSE"}
name = "zarr_benchmarks"
readme = "README.md"
requires-python = ">=3.11"
version = "0.0.1"

[project.optional-dependencies]
dev = [
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/HEFTIEProject/zarr-benchmarks"
Issues = "https://github.com/HEFTIEProject/zarr-benchmarks/issues"

[tool.pytest]

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "tensorstore",
    "zarr_python",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
