[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [
    {email = "arc.collaborations@ucl.ac.uk", name = "Centre for Advanced Research Computing"},
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
# Dependencies for running the benchmarks are specified in tox.toml
#
# These dependencies are either common across all benchmarks, or
# for post-processing of results
dependencies = [
    # Parsing and plotting benchmark data
    "jsonschema",
    "matplotlib",
    "pandas",
    "seaborn",
    # Loading image test data
    "imageio",
    "numpy",
    # Running tests
    "pytest",
    "pytest-benchmark",
    "tox",
]
description = "zarr benchmarks"
license = {file = "LICENSE"}
name = "zarr_benchmarks"
readme = "README.md"
requires-python = ">=3.11"
version = "0.0.1"

[project.optional-dependencies]
dev = [
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/HEFTIEProject/zarr-benchmarks"
Issues = "https://github.com/HEFTIEProject/zarr-benchmarks/issues"

[tool.pytest]

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "tensorstore",
    "zarr_python",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
