[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [
    { email = "arc.collaborations@ucl.ac.uk", name = "Centre for Advanced Research Computing" },
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = ["imageio", "pytest", "pytest-benchmark", "tox", "jsonschema"]
description = "zarr benchmarks"
license = { file = "LICENSE" }
name = "zarr_benchmarks"
readme = "README.md"
requires-python = ">=3.11"
version = "0.0.1"

[project.optional-dependencies]
dev = ["pre-commit"]
plots = ["matplotlib", "seaborn", "pandas"]
tensorstore = ["tensorstore==0.1.73"]
zarr-python-v2 = ["numcodecs==0.15.1", "zarr==2.18.4"]
zarr-python-v3 = ["numcodecs==0.15.1", "zarr==3.0.6"]

[tool.uv]
conflicts = [[{ extra = "zarr-python-v2" }, { extra = "zarr-python-v3" }]]

[project.urls]
Homepage = "https://github.com/HEFTIEProject/zarr-benchmarks"
Issues = "https://github.com/HEFTIEProject/zarr-benchmarks/issues"

[tool.pytest]

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = ["tensorstore", "zarr_python"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
